2009-11-08  David Levin  <levin@chromium.org>

        Unreviewed build fix for chromium.

        Build fix for https://bugs.webkit.org/show_bug.cgi?id=31219
        Clean up GraphicsContext's current concept of ColorSpace

        * platform/graphics/skia/GraphicsContextSkia.cpp:
        (WebCore::GraphicsContext::fillPath):
        (WebCore::GraphicsContext::fillRect):
        (WebCore::GraphicsContext::strokePath):
        (WebCore::GraphicsContext::strokeRect):

2009-11-08  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: [REGRESSION] committing style edit
        clears elements panel selection.

        https://bugs.webkit.org/show_bug.cgi?id=31242

        * inspector/front-end/ElementsTreeOutline.js:
        (WebInspector.ElementsTreeOutline.prototype.update):
        * inspector/front-end/StylesSidebarPane.js:
        (WebInspector.StylePropertyTreeElement.prototype.):
        (WebInspector.StylePropertyTreeElement.prototype):

2009-11-08  Janne Koskinen  <janne.p.koskinen@digia.com>

        Reviewed by Holger Freyther.

        ResourceRequest to be class instead of struct
        https://bugs.webkit.org/show_bug.cgi?id=30670

        Started as a compilation fix for Symbian where the compiler makes a distinction between
        class and struct in function argument signatures.
        Changed all forward declarations of ResourceRequest to have class in the forward
        declaration instead of struct and changed the definition of ResourceRequest to be class
        and added access qualifiers where missing. Additionally two references of friend
        struct ResourceRequestBase changed to class instead.

        * history/HistoryItem.h:
        * inspector/InspectorController.h:
        * inspector/InspectorResource.h:
        * loader/DocumentThreadableLoader.h:
        * loader/FrameLoaderClient.h:
        * loader/MainResourceLoader.h:
        * loader/ResourceLoadNotifier.h: