@@ -704,8 +704,6 @@ void GraphicsContext::fillPath()
       return;
 
     const GraphicsContextState& state = m_common->state;
-    ColorType colorSpace = state.fillType;
-
     path.setFillType(state.fillRule == RULE_EVENODD ?
         SkPath::kEvenOdd_FillType : SkPath::kWinding_FillType);
 
@@ -727,7 +725,6 @@ void GraphicsContext::fillRect(const FloatRect& rect)
     }
 
     const GraphicsContextState& state = m_common->state;
-    ColorType colorSpace = state.fillType;
 
     SkPaint paint;
     platformContext()->setupPaintForFilling(&paint);
@@ -1118,7 +1115,6 @@ void GraphicsContext::strokePath()
         return;
 
     const GraphicsContextState& state = m_common->state;
-    ColorType colorSpace = state.strokeType;
 
     SkPaint paint;
     platformContext()->setupPaintForStroking(&paint, 0, 0);
@@ -1135,7 +1131,6 @@ void GraphicsContext::strokeRect(const FloatRect& rect, float lineWidth)
         return;
 
     const GraphicsContextState& state = m_common->state;
-    ColorType colorSpace = state.strokeType;
 
     SkPaint paint;
     platformContext()->setupPaintForStroking(&paint, 0, 0);
